# severe-delays

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Rocket.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml
fe/: .prettierrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
fe/src/: App.tsx  NotFound.tsx  Popover.tsx  constants.ts  index.css  index.tsx
fe/src/LineHistory/: Line.tsx  LineHistory.tsx  Settings.tsx  index.ts  types.ts
fe/src/LiveLineView/: LiveLineView.tsx  TrainIndicator.tsx  index.ts  lineLayouts.tsx  locationParser.ts  types.ts
fe/src/StatusHistory/: Line.tsx  Settings.tsx  Station.tsx  StatusHistory.tsx  StatusHistoryBase.tsx  index.ts  types.ts
fe/src/api/: api.ts  types.ts
fe/src/components/: Button.tsx  SplitButton.tsx
fe/src/directives/: clickOutside.ts  helpers.ts
src/: config.rs  cors.rs  main.rs  types.rs
src/routes/: api.rs  fe.rs  mod.rs  utils.rs
src/store/: fairing.rs  memory.rs  mod.rs  sqlite.rs
src/tfl/: api.rs  background.rs  fairing.rs  mod.rs  parser.rs  stationdetails.rs
