[package]
name = "severe-delays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
time = { version = "0.3.41", features = ["serde", "parsing"] }
async-trait = "0.1.88"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
itertools = "0.14.0"
